--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@ header-img: "img/namucuo.jpeg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>简单更快乐<br>
+    自由是风...</p></blockquote>
 
     <p>Hey，我是<strong>翁凡(蓝with黑)</strong>，一只web前端程序猿，现在杭州工作。</p>
 
@@ -27,14 +27,14 @@ header-img: "img/namucuo.jpeg"
 
     <p></p>
     
-    <h5>Talks</h5>
+    <!-- <h5>Talks</h5>
 
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
-        <!-- <li><a href="http://jekyll.com.cn/">jekyll</a></li> -->
-        <!-- <li><a href="http://huangxuan.me/">Hux</a></li>  -->
+        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
+        <li><a href="http://huangxuan.me/">Hux</a></li> 
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul>
+    </ul> -->
 </div>
 
 <!-- English Version -->
