--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "wingter is coming..."
+description: "winter is coming..."
 ---
 
 {% for post in paginator.posts %}
